; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_demux_flush.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_demux_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.demux_internal* }
%struct.demux_internal = type { i32, i32, i32*, %struct.TYPE_3__* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @demux_flush(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.demux_internal*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load %struct.demux_internal*, %struct.demux_internal** %6, align 8
  store %struct.demux_internal* %7, %struct.demux_internal** %3, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = load %struct.demux_internal*, %struct.demux_internal** %3, align 8
  %10 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %9, i32 0, i32 3
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = icmp eq %struct.TYPE_3__* %8, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load %struct.demux_internal*, %struct.demux_internal** %16, align 8
  %18 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %17, i32 0, i32 1
  %19 = call i32 @pthread_mutex_lock(i32* %18)
  %20 = load %struct.demux_internal*, %struct.demux_internal** %3, align 8
  %21 = call i32 @clear_reader_state(%struct.demux_internal* %20, i32 1)
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %38, %1
  %23 = load i32, i32* %4, align 4
  %24 = load %struct.demux_internal*, %struct.demux_internal** %3, align 8
  %25 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = icmp slt i32 %23, %26
  br i1 %27, label %28, label %41

28:                                               ; preds = %22
  %29 = load %struct.demux_internal*, %struct.demux_internal** %3, align 8
  %30 = load %struct.demux_internal*, %struct.demux_internal** %3, align 8
  %31 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %30, i32 0, i32 2
  %32 = load i32*, i32** %31, align 8
  %33 = load i32, i32* %4, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %32, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @clear_cached_range(%struct.demux_internal* %29, i32 %36)
  br label %38

38:                                               ; preds = %28
  %39 = load i32, i32* %4, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %4, align 4
  br label %22

41:                                               ; preds = %22
  %42 = load %struct.demux_internal*, %struct.demux_internal** %3, align 8
  %43 = call i32 @free_empty_cached_ranges(%struct.demux_internal* %42)
  %44 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 0
  %46 = load %struct.demux_internal*, %struct.demux_internal** %45, align 8
  %47 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %46, i32 0, i32 1
  %48 = call i32 @pthread_mutex_unlock(i32* %47)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @clear_reader_state(%struct.demux_internal*, i32) #1

declare dso_local i32 @clear_cached_range(%struct.demux_internal*, i32) #1

declare dso_local i32 @free_empty_cached_ranges(%struct.demux_internal*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
